# Fault-Diagnosis-for-MobileRobots

./: README.md
Data/Class0-NoObstacle/Trail1/: Trail1.xls
Data/Class0-NoObstacle/Trail1/rosbag2_2020_02_20-10_32_12/: metadata.yaml  rosbag2_2020_02_20-10_32_12.db3
Data/Class0-NoObstacle/Trail2/: Trail2.xls  metadata.yaml  rosbag2_2020_02_20-10_44_11.db3
Data/Class0-NoObstacle/Trail3/: Trail3.xls  Trail3.xlx.ods
Data/Class0-NoObstacle/Trail3/rosbag2_2020_02_20-11_05_54/: metadata.yaml  rosbag2_2020_02_20-11_05_54.db3
Data/Class0-NoObstacle/Trail4/: Trail4.xls
Data/Class0-NoObstacle/Trail4/rosbag2_2020_02_20-11_23_31/: metadata.yaml  rosbag2_2020_02_20-11_23_31.db3
Data/Class0-NoObstacle/Trail5/: output_Avel.xls  output_IMU.xls  output_current.xls  output_vel.xls
Data/Class0-NoObstacle/Trail5/rosbag2_2020_02_20-13_38_54/: metadata.yaml  rosbag2_2020_02_20-13_38_54.db3
Data/Class1-RigidObstacle/Trail1/: Trail1.xls
Data/Class1-RigidObstacle/Trail1/rosbag2_2020_02_20-13_39_44/: metadata.yaml  rosbag2_2020_02_20-13_39_44.db3
Data/Class1-RigidObstacle/Trail2/: Trail2.xls
Data/Class1-RigidObstacle/Trail2/rosbag2_2020_02_20-13_54_21/: metadata.yaml  rosbag2_2020_02_20-13_54_21.db3
Data/Class1-RigidObstacle/Trail3/: Trail3.xls
Data/Class1-RigidObstacle/Trail4/: Trail4.xls
Data/Class2-MovableObstacle/Trail1/: Trail1.xls
Data/Class2-MovableObstacle/Trail2/: Trail2.xls
Data/Class2-MovableObstacle/Trail3/: Trail3.xls
Data/Class2-MovableObstacle/Trail4/: Trail4.xls
Data/Class3-RWStuck/Trail1/: Trail1.xls
Data/Class3-RWStuck/Trail2/: Trail2.xls
Data/Class3-RWStuck/Trail3/: Trail3.xls
Data/Class3-RWStuck/Trail4/: Trail4.xls
Data/Class4-LWStuck/Trail1/: Trail1.xls
Data/Class4-LWStuck/Trail2/: Trail2.xls
Data/Class4-LWStuck/Trail3/: Trail3.xls
Data/Class4-LWStuck/Trail4/: Trail4.xls  report.xls
Data/Class5-SlipObstacle/Trail1/: 5_1.xlsx  Trail1.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class5-SlipObstacle/Trail2/: 5_2.xlsx  Trail2.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class5-SlipObstacle/Trail3/: Trail3.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class5-SlipObstacle/Trail4/: 5_4.xlsx  Trail41.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class6-Scratch/Trail1/: Trail1.xls
Data/Class6-Scratch/Trail2/: Trail2.xls
Data/Class6-Scratch/Trail3/: Trail3.xls
Data/Class6-Scratch/Trail4/: Trail4.xls  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class6-Scratch/rotT1/: Trail1.xls  metadata.yaml  rosbag2_2020_02_21-15_47_46.db3
Data/Class6-Scratch/rotT2/: Trail2_rot.xls  metadata.yaml  rosbag2_2020_02_21-15_49_00.db3
Data/Class6-Scratch/rotT3/: Trail3_rot.xls  metadata.yaml  rosbag2_2020_02_21-15_50_56.db3
Data/Class6-Scratch/rotT4/: Trail4_rot.xls  metadata.yaml  rosbag2_2020_02_21-15_56_06.db3
Data/Class7-StuckTable/Trail1/: Trail1.xls  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class7-StuckTable/Trail2/: Trail2.xls  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class7-StuckTable/Trail3/: Trail3.xls  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class7-StuckTable/Trail4/: Trail4.xls  metadata.yaml  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx  rosbag2_2020_02_21-16_06_44.db3
Data/Class8-Pithole/Trail1/: Trail1.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class8-Pithole/Trail2/: Trail2.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Class8-Pithole/Trail3/: 8_3.xlsx  Trail3.xlsx  info.txt  output_Avel.xlsx  output_IMU.xlsx  output_current.xlsx  output_vel.xlsx
Data/Model/: .~lock.Trail1.xlsx#  .~lock.Trail2.xlsx#  012_1.xlsx  012_2.xlsx  01_1.xlsx  01_2.xlsx  01_3.xlsx  Trail1.xlsx  Trail1_clean.xlsx  Trail2.xlsx  Trail2_clean.xlsx  Trail3.xlsx  Trail3_clean.xlsx
Data/Model/Trail1/: 0.xlsx  0_clean.xlsx  1_clean.xlsx  2.xlsx  2_clean.xlsx  3.xlsx  3_clean.xlsx  4.xlsx  4_clean.xlsx  5_clean.xlsx  6.xlsx  6_clean.xlsx  7.xlsx  7_clean.xlsx  8.xlsx  8_clean.xlsx
Data/Model/Trail2/: 0.xlsx  0_clean.xlsx  1.xlsx  1_clean.xlsx  2.xlsx  2_clean.xlsx  3.xlsx  3_clean.xlsx  4.xlsx  4_clean.xlsx  5_clean.xlsx  6.xlsx  6_clean.xlsx  7.xlsx  7_clean.xlsx  8.xlsx  8_clean.xlsx
Data/Model/Trail3/: 0.xlsx  0_clean.xlsx  1.xlsx  1_clean.xlsx  2_clean.xlsx  3.xlsx  3_clean.xlsx  4.xlsx  4_clean.xlsx  5.xlsx  5_clean.xlsx  6.xlsx  6_clean.xlsx  7.xlsx  7_clean.xlsx  8_clean.xlsx
Data/Model/report/: 0.xlsx  2.xlsx
Data/Model/report/d/: 0.xlsx  1.xlsx
Data/Model/resampled/: .~lock.2.xlsx#  0.xlsx  1.xlsx  2.xlsx  4.xlsx  5.xlsx  8.xlsx  Trail1.xlsx  Trail2.xlsx  Trail3.xlsx
Milestone1/kobuki_core/kobuki_driver/: CMakeLists.txt
Milestone1/kobuki_core/kobuki_ftdi/: package.xml
Milestone1/robot_nav/: CMakeLists.txt  package.xml  uml.wsd
Milestone1/robot_nav/launch/: navigation.launch.py
Milestone1/robot_nav/src/: backup.txt  csv_extractor.cpp  current_monitor.cpp  fake_odom.cpp  float_array.cpp  navigation.cpp  validation.cpp  vel_publisher.cpp
Milestone1/turtlebot2_drivers/: CMakeLists.txt  package.xml
Milestone1/turtlebot2_drivers/src/: kobuki_node.cpp  motor_current.cpp
scripts/: Analyze_Threshold.ipynb  Manual_classifcation.ipynb  Model_Data.ipynb  Modelling.ipynb  Preparing_Data.ipynb  Read_Data.ipynb
validation_node/parameters/: clas.pkl  combined.pkl  combined_class.pkl  sc_X.pkl
validation_node/validation/: package.xml  setup.cfg  setup.py
validation_node/validation/validation/: validation.py
(+73 files in other folders)
